Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36484

Lots of warning messages in Console on Mac OS 10.6 & 10.7 (QNSView)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.2.0
    • None
    • Mac OS 10.6.7, 10.7.5

      Qt options:
      ./configure -no-openssl -nomake examples -nomake tests -platform macx-clang-32 -no-c++11
    • macOS
    • 98405c41

    Description

      The problem is the the QNSView (qtbase\src\plugins\platforms\cocoa\qnsview.mm)

      Steps to reproduce.

      1. Create any simple empty QMainWindow application.
      2. Run it

      Happens on 10.6 and 10.7 only. Release build of the app. Doesn't happen on 10.8 and 10.9.

      - (void)handleTabletEvent: (NSEvent *)theEvent
      {
          NSEventType eventType = [theEvent type];
          if (eventType != NSTabletPoint && [theEvent subtype] != NSTabletPointEventSubtype)
              return; // Not a tablet event.
      
          ulong timestamp = [theEvent timestamp] * 1000;
      
          QPointF windowPoint;
          QPointF screenPoint;
          [self convertFromScreen:[NSEvent mouseLocation] toWindowPoint: &windowPoint andScreenPoint: &screenPoint];
      
          uint deviceId = [theEvent deviceID];
          if (!tabletDeviceDataHash->contains(deviceId)) {
              qWarning("QNSView handleTabletEvent: This tablet device is unknown"
                       " (received no proximity event for it). Discarding event.");
              return;
          }
      ...
      ...
      

      Attachments

        1. 10.6_console.png
          10.6_console.png
          312 kB
        2. 10.7_console.png
          10.7_console.png
          542 kB
        3. QT-36484_Mac_10-8-2_VirtualBox.png
          QT-36484_Mac_10-8-2_VirtualBox.png
          372 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            crystalidea Steven (crystalidea)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes