src/plugins/platforms/cocoa/qnsview.mm
@@ -859,14 +859,9 @@ Q_GLOBAL_STATIC(QCocoaTabletDeviceDataHash, tabletDeviceDataHash)
 
     uint deviceId = [theEvent deviceID];
     if (!tabletDeviceDataHash->contains(deviceId)) {
-        // 10.6 sends tablet events for trackpad interaction, but
-        // not proximity events. Silence the warning to prevent
-        // flooding the console.
-        if (QSysInfo::QSysInfo::MacintoshVersion == QSysInfo::MV_10_6)
-            return;
-
-        qWarning("QNSView handleTabletEvent: This tablet device is unknown"
-                 " (received no proximity event for it). Discarding event.");
+        // Error: Unknown tablet device. Qt also gets into this state
+        // when running on a VM. This appears to be harmless; don't
+        // print a warning.
         return;
     }
     const QCocoaTabletDeviceData &deviceData = tabletDeviceDataHash->value(deviceId);
